syntax = "proto3";

package api;

import "auth.proto";

option go_package = "github.com/alecsavvy/shreddr/server/api";

service TicketService {
  rpc GetTicket(GetTicketRequest) returns (GetTicketResponse);
}

message Ticket {
  string id = 1;
  string event_id = 2;
  string public_key = 3;
  string created_at = 4;
  string updated_at = 5;
}

message GetTicketRequest {
  AuthHeader auth_header = 1;
  string event_id = 2;
}

message GetTicketResponse {
  Ticket ticket = 1;
}
