syntax = "proto3";

package api;

import "auth.proto";

option go_package = "github.com/alecsavvy/shreddr/server/api";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

// User represents a user account
message User {
  int32 id = 1; // numeric id
  string public_key = 2; // Primary Solana wallet address
  string created_at = 3; // ISO 8601 timestamp
  string updated_at = 4; // ISO 8601 timestamp
}

message GetUserRequest {
  AuthHeader auth_header = 1;
}

message GetUserResponse {
  User user = 1;
}
