syntax = "proto3";

package api;

import "auth.proto";

option go_package = "github.com/alecsavvy/shreddr/server/api";

service VenueService {
  rpc GetVenue(GetVenueRequest) returns (GetVenueResponse);
  rpc ListVenues(ListVenuesRequest) returns (ListVenuesResponse);
  rpc CreateVenue(CreateVenueRequest) returns (CreateVenueResponse);
}

message Venue {
  string id = 1;
  string name = 2;
  string description = 3;
  double latitude = 4;
  double longitude = 5;
  string country = 6;
  string region = 7;
  string city = 8;
  int32 capacity = 9;
  string created_at = 10;
  string updated_at = 11;
}

message GetVenueRequest {
  AuthHeader auth_header = 1;
  string venue_id = 2;
}

message GetVenueResponse {
  Venue venue = 1;
}

message ListVenuesRequest {
  AuthHeader auth_header = 1;
}

message ListVenuesResponse {
  repeated Venue venues = 1;
}

message CreateVenueRequest {
  AuthHeader auth_header = 1;
  Venue venue = 2;
}

message CreateVenueResponse {
  Venue venue = 1;
}
